objects/Feed_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <description>Only populated when Status = Failure</description>
        <inlineHelpText>Only populated when Status = Failure</inlineHelpText>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feed</label>
        <referenceTo>Feed__c</referenceTo>
        <relationshipLabel>Feed Batches</relationshipLabel>
        <relationshipName>Feed_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feed_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feed Batch</label>
    <nameField>
        <displayFormat>FB{0}</displayFormat>
        <label>Feed Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feed Batches</pluralLabel>
    <recordTypes>
        <fullName>Batch</fullName>
        <active>true</active>
        <label>Batch</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>